break: reorganize for v2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Shared</title>
+    <link rel="stylesheet" href="./shared.css">
 </head>
 <body>
     <main>
@@ -11,8 +12,10 @@
         <p>Inline <code>code</code> and then a block:</p>
         <pre>
 // of pre-formatted code
+
 let foo = true;</pre>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima explicabo harum odit temporibus nemo fuga, <a href="#">eius soluta</a>.</p>
     </main>
 </body>
-<script src="./index.js"></script>
+<script src="./shared.js"></script>
 </html>
