style: add styles for button, input, textarea

--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Demo Shared</title>
-    <link rel="stylesheet" href="./shared.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./shared.css" />
+  </head>
+  <body>
     <main>
-        <h1>Demo Shared</h1>
-        <p>Shared styles and scripts for my demos</p>
-        <p>Inline <code>code</code> and then a block:</p>
-        <pre>
+      <h1>Demo Shared</h1>
+      <p>Shared styles and scripts for my demos</p>
+      <p>Inline <code>code</code> and then a block:</p>
+      <pre>
 // of pre-formatted code
 
-let foo = true;</pre>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima explicabo harum odit temporibus nemo fuga, <a href="#">eius soluta</a>.</p>
+let foo = true;</pre
+      >
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+        explicabo harum odit temporibus nemo fuga, <a href="#">eius soluta</a>.
+      </p>
+      <div class="--mb">
+        <button>Button</button>
+        <input placeholder="Input" />
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+        explicabo harum odit temporibus nemo fuga, <a href="#">eius soluta</a>.
+      </p>
     </main>
-</body>
-<script src="./shared.js"></script>
+  </body>
+  <script src="./shared.js"></script>
 </html>
